# aoc

./: .gitignore  README.md  pixi.toml
15/jl/: 01.jl  02.jl  03.jl  04.jl
15/py/: 05.py
21/: reflections.md
21/jl/: 01-1.jl  02.jl  03.jl
21/jl/04/: fns.jl  run.jl  tests.jl
21/jl/05/: fns.jl  test.jl
22/hy/: 01.hy  02.hy  05.hy  09.hy  11.hy  21.hy  _05.hy  _09.hy
22/jl/: 01.jl  05.jl  09.jl  12.jl
23/jl/: 02.jl  05.jl  07.jl  08.jl  09.jl  09_double_ended_extrapolation.jl  10-old.jl  10-parse.jl
23/py/: 09.py
24/no_white_py/: 02.py  README.md
24/py/: 01.py
25/py/: pyproject.toml
25/py/src/aoc25/: __init__.py  app.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
conda/: 2023.yml  2024.yml  aoc.yml
jl/: 01.jl  01_rec.jl  03.jl  04.jl  06.jl  09-both.jl  09.jl
tools/aoc-data/: pyproject.toml
tools/aoc-data/src/aoc_data/: app.py
